--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:          "Your awesome title"
+title:          "Chris Brand"
 description:    ""
 baseurl:        ""
 markdown:       kramdown
