Use a template for the index page.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ baseurl: ""
 destination: "./_site/"
 
 title: "Chris Brand"
-description: ""
+description: "My name is Chris Brand (aka. Arcturial); I am a software developer, gamer and aspiring game designer from South Africa."
 
 markdown: kramdown
 
