--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ markdown: kramdown
 title: Chris Brand
 author: Chris Brand
 tagline: "Software Developer / Creator"
+url: http://arcturial.github.io
 description: "My name is Chris Brand (aka. Arcturial); I am a software developer, gamer and aspiring game designer from South Africa."
 
 linkedin: https://za.linkedin.com/in/arcturial
